group("gmp_all") {
  deps = [
    ":gmp",
    ":gmpxx",
    ":libgmp",
    ":libgmpxx"
  ]
}

config("gmp_config") {
  defines = [
    "_CRT_NONSTDC_NO_DEPRECATE",
    "__GMP_WITHIN_GMP",
  ]
  include_dirs = [
    "missing",
    "gmp"
  ]
  #cflags_c = [ "-Wno-implicit-function-declaration" ]
  ldflags = [
    "/ignore:4018",
    "/ignore:4101",
    "/ignore:4146",
    "/ignore:4244",
    "/ignore:4267",
    "/ignore:4334"
  ]
}

shared_library("libgmpxx") {
  defines = [
    "__GMP_LIBGMP_DLL",
    "__GMP_WITHIN_GMPXX"
  ]
  configs += [ ":gmp_config" ]
  sources = [
    "gmp/cxx/isfuns.cc",
    "gmp/cxx/ismpf.cc",
    "gmp/cxx/ismpq.cc",
    "gmp/cxx/ismpz.cc",
    "gmp/cxx/ismpznw.cc",
    "gmp/cxx/limits.cc",
    "gmp/cxx/osdoprnti.cc",
    "gmp/cxx/osfuns.cc",
    "gmp/cxx/osmpf.cc",
    "gmp/cxx/osmpq.cc",
    "gmp/cxx/osmpz.cc"
  ]
  public_deps = [ ":gmp" ]
}

static_library("gmpxx") {
  defines = [
    "_LIB",
    "__GMP_WITHIN_GMPXX"
  ]
  configs += [ ":gmp_config" ]
  sources = [
    "gmp/cxx/isfuns.cc",
    "gmp/cxx/ismpf.cc",
    "gmp/cxx/ismpq.cc",
    "gmp/cxx/ismpz.cc",
    "gmp/cxx/ismpznw.cc",
    "gmp/cxx/limits.cc",
    "gmp/cxx/osdoprnti.cc",
    "gmp/cxx/osfuns.cc",
    "gmp/cxx/osmpf.cc",
    "gmp/cxx/osmpq.cc",
    "gmp/cxx/osmpz.cc"
  ]
  public_deps = [ ":gmp" ]
}

shared_library("libgmp") {
  defines = [ "__GMP_LIBGMP_DLL" ]
  configs += [ ":gmp_config" ]
  sources = [
    "missing/fib_table.c",
    "missing/mp_bases.c",
    "missing/mpn_sec_ops.c",
  ]
  sources += [
    "gmp/assert.c",
    "gmp/compat.c",
    "gmp/errno.c",
    "gmp/extract-dbl.c",
    "gmp/invalid.c",
    "gmp/memory.c",
    "gmp/mp_bpl.c",
    "gmp/mp_clz_tab.c",
    "gmp/mp_dv_tab.c",
    "gmp/mp_get_fns.c",
    "gmp/mp_minv_tab.c",
    "gmp/mp_set_fns.c",
    "gmp/nextprime.c",
    "gmp/primesieve.c",
    "gmp/tal-reent.c",
    "gmp/version.c"
  ]
  public_deps = [
    ":rand",
    ":mpf",
    ":mpn",
    ":mpq",
    ":mpz",
    ":printf",
    ":scanf"
  ]
}

static_library("gmp") {
  defines = [ "_LIB" ]
  configs += [ ":gmp_config" ]
  sources = [
    "gmp/fib_table.c",
    "gmp/mpn_sec_ops.c",
    "gmp/mp_bases.c",
    "gmp/assert.c",
    "gmp/compat.c",
    "gmp/errno.c",
    "gmp/extract-dbl.c",
    "gmp/invalid.c",
    "gmp/memory.c",
    "gmp/mp_bpl.c",
    "gmp/mp_clz_tab.c",
    "gmp/mp_dv_tab.c",
    "gmp/mp_get_fns.c",
    "gmp/mp_minv_tab.c",
    "gmp/mp_set_fns.c",
    "gmp/nextprime.c",
    "gmp/primesieve.c",
    "gmp/tal-reent.c",
    "gmp/version.c"
  ]
  public_deps = [
    ":rand",
    ":mpf",
    ":mpn",
    ":mpq",
    ":mpz",
    ":printf",
    ":scanf"
  ]
}

source_set("rand") {
  configs += [ ":gmp_config" ]
  sources = [
    "gmp/rand/rand.c",
    "gmp/rand/randbui.c",
    "gmp/rand/randclr.c",
    "gmp/rand/randdef.c",
    "gmp/rand/randiset.c",
    "gmp/rand/randlc2s.c",
    "gmp/rand/randlc2x.c",
    "gmp/rand/randmt.c",
    "gmp/rand/randmts.c",
    "gmp/rand/randmui.c",
    "gmp/rand/rands.c",
    "gmp/rand/randsd.c",
    "gmp/rand/randsdui.c"
  ]
}

source_set("mpf") {
  configs += [ ":gmp_config" ]
  sources = [
    "gmp/mpf/abs.c",
    "gmp/mpf/add.c",
    "gmp/mpf/add_ui.c",
    "gmp/mpf/ceilfloor.c",
    "gmp/mpf/clear.c",
    "gmp/mpf/clears.c",
    "gmp/mpf/cmp.c",
    "gmp/mpf/cmp_d.c",
    "gmp/mpf/cmp_si.c",
    "gmp/mpf/cmp_ui.c",
    "gmp/mpf/cmp_z.c",
    "gmp/mpf/div.c",
    "gmp/mpf/div_2exp.c",
    "gmp/mpf/div_ui.c",
    "gmp/mpf/dump.c",
    "gmp/mpf/eq.c",
    "gmp/mpf/fits_sint.c",
    "gmp/mpf/fits_slong.c",
    "gmp/mpf/fits_sshort.c",
    "gmp/mpf/fits_uint.c",
    "gmp/mpf/fits_ulong.c",
    "gmp/mpf/fits_ushort.c",
    "gmp/mpf/get_d.c",
    "gmp/mpf/get_dfl_prec.c",
    "gmp/mpf/get_d_2exp.c",
    "gmp/mpf/get_prc.c",
    "gmp/mpf/get_si.c",
    "gmp/mpf/get_str.c",
    "gmp/mpf/get_ui.c",
    "gmp/mpf/init.c",
    "gmp/mpf/init2.c",
    "gmp/mpf/inits.c",
    "gmp/mpf/inp_str.c",
    "gmp/mpf/int_p.c",
    "gmp/mpf/iset.c",
    "gmp/mpf/iset_d.c",
    "gmp/mpf/iset_si.c",
    "gmp/mpf/iset_str.c",
    "gmp/mpf/iset_ui.c",
    "gmp/mpf/mul.c",
    "gmp/mpf/mul_2exp.c",
    "gmp/mpf/mul_ui.c",
    "gmp/mpf/neg.c",
    "gmp/mpf/out_str.c",
    "gmp/mpf/pow_ui.c",
    "gmp/mpf/random2.c",
    "gmp/mpf/reldiff.c",
    "gmp/mpf/set.c",
    "gmp/mpf/set_d.c",
    "gmp/mpf/set_dfl_prec.c",
    "gmp/mpf/set_prc.c",
    "gmp/mpf/set_prc_raw.c",
    "gmp/mpf/set_q.c",
    "gmp/mpf/set_si.c",
    "gmp/mpf/set_str.c",
    "gmp/mpf/set_ui.c",
    "gmp/mpf/set_z.c",
    "gmp/mpf/size.c",
    "gmp/mpf/sqrt.c",
    "gmp/mpf/sqrt_ui.c",
    "gmp/mpf/sub.c",
    "gmp/mpf/sub_ui.c",
    "gmp/mpf/swap.c",
    "gmp/mpf/trunc.c",
    "gmp/mpf/ui_div.c",
    "gmp/mpf/ui_sub.c",
    "gmp/mpf/urandomb.c"
  ]
}

source_set("mpn") {
  configs += [ ":gmp_config" ]
  sources = [
    "gmp/mpn/generic/addmul_1.c",
    "gmp/mpn/generic/add_err1_n.c",
    "gmp/mpn/generic/add_err2_n.c",
    "gmp/mpn/generic/add_err3_n.c",
    "gmp/mpn/generic/add_n.c",
    "gmp/mpn/generic/add_n_sub_n.c",
    "gmp/mpn/generic/bdiv_dbm1c.c",
    "gmp/mpn/generic/bdiv_q.c",
    "gmp/mpn/generic/bdiv_qr.c",
    "gmp/mpn/generic/bdiv_q_1.c",
    "gmp/mpn/generic/binvert.c",
    "gmp/mpn/generic/broot.c",
    "gmp/mpn/generic/brootinv.c",
    "gmp/mpn/generic/bsqrt.c",
    "gmp/mpn/generic/bsqrtinv.c",
    "gmp/mpn/generic/cnd_add_n.c",
    "gmp/mpn/generic/cnd_sub_n.c",
    "gmp/mpn/generic/cnd_swap.c",
    "gmp/mpn/generic/comb_tables.c",
    "gmp/mpn/generic/compute_powtab.c",
    "gmp/mpn/generic/copyd.c",
    "gmp/mpn/generic/copyi.c",
    "gmp/mpn/generic/dcpi1_bdiv_q.c",
    "gmp/mpn/generic/dcpi1_bdiv_qr.c",
    "gmp/mpn/generic/dcpi1_divappr_q.c",
    "gmp/mpn/generic/dcpi1_div_q.c",
    "gmp/mpn/generic/dcpi1_div_qr.c",
    "gmp/mpn/generic/diveby3.c",
    "gmp/mpn/generic/dive_1.c",
    "gmp/mpn/generic/divrem.c",
    "gmp/mpn/generic/divrem_1.c",
    "gmp/mpn/generic/divrem_2.c",
    "gmp/mpn/generic/div_q.c",
    "gmp/mpn/generic/div_qr_1.c",
    "gmp/mpn/generic/div_qr_1n_pi1.c",
    "gmp/mpn/generic/div_qr_1n_pi2.c",
    "gmp/mpn/generic/div_qr_1u_pi2.c",
    "gmp/mpn/generic/div_qr_2.c",
    "gmp/mpn/generic/div_qr_2n_pi1.c",
    "gmp/mpn/generic/div_qr_2u_pi1.c",
    "gmp/mpn/generic/fib2m.c",
    "gmp/mpn/generic/gcdext_1.c",
    "gmp/mpn/generic/gcdext_lehmer.c",
    "gmp/mpn/generic/gcd_1.c",
    "gmp/mpn/generic/gcd_11.c",
    "gmp/mpn/generic/gcd_22.c",
    "gmp/mpn/generic/gcd_subdiv_step.c",
    "gmp/mpn/generic/hgcd.c",
    "gmp/mpn/generic/hgcd2.c",
    "gmp/mpn/generic/hgcd2_jacobi.c",
    "gmp/mpn/generic/hgcd_appr.c",
    "gmp/mpn/generic/hgcd_jacobi.c",
    "gmp/mpn/generic/hgcd_matrix.c",
    "gmp/mpn/generic/hgcd_reduce.c",
    "gmp/mpn/generic/hgcd_step.c",
    "gmp/mpn/generic/invertappr.c",
    "gmp/mpn/generic/jacbase.c",
    "gmp/mpn/generic/jacobi_2.c",
    "gmp/mpn/generic/lshift.c",
    "gmp/mpn/generic/lshiftc.c",
    "gmp/mpn/generic/matrix22_mul.c",
    "gmp/mpn/generic/matrix22_mul1_inverse_vector.c",
    "gmp/mpn/generic/mode1o.c",
    "gmp/mpn/generic/mod_1.c",
    "gmp/mpn/generic/mod_1_1.c",
    "gmp/mpn/generic/mod_1_2.c",
    "gmp/mpn/generic/mod_1_3.c",
    "gmp/mpn/generic/mod_1_4.c",
    "gmp/mpn/generic/mod_34lsub1.c",
    "gmp/mpn/generic/mullo_basecase.c",
    "gmp/mpn/generic/mullo_n.c",
    "gmp/mpn/generic/mulmid.c",
    "gmp/mpn/generic/mulmid_basecase.c",
    "gmp/mpn/generic/mulmid_n.c",
    "gmp/mpn/generic/mulmod_bknp1.c",
    "gmp/mpn/generic/mulmod_bnm1.c",
    "gmp/mpn/generic/mul_1.c",
    "gmp/mpn/generic/mul_basecase.c",
    "gmp/mpn/generic/mul_fft.c",
    "gmp/mpn/generic/mul_n.c",
    "gmp/mpn/generic/mu_bdiv_q.c",
    "gmp/mpn/generic/mu_bdiv_qr.c",
    "gmp/mpn/generic/mu_divappr_q.c",
    "gmp/mpn/generic/mu_div_q.c",
    "gmp/mpn/generic/mu_div_qr.c",
    "gmp/mpn/generic/nussbaumer_mul.c",
    "gmp/mpn/generic/powlo.c",
    "gmp/mpn/generic/pow_1.c",
    "gmp/mpn/generic/pre_divrem_1.c",
    "gmp/mpn/generic/pre_mod_1.c",
    "gmp/mpn/generic/redc_1.c",
    "gmp/mpn/generic/redc_2.c",
    "gmp/mpn/generic/redc_n.c",
    "gmp/mpn/generic/rshift.c",
    "gmp/mpn/generic/sbpi1_bdiv_q.c",
    "gmp/mpn/generic/sbpi1_bdiv_qr.c",
    "gmp/mpn/generic/sbpi1_bdiv_r.c",
    "gmp/mpn/generic/sbpi1_divappr_q.c",
    "gmp/mpn/generic/sbpi1_div_q.c",
    "gmp/mpn/generic/sbpi1_div_qr.c",
    "gmp/mpn/generic/sec_invert.c",
    "gmp/mpn/generic/sec_mul.c",
    "gmp/mpn/generic/sec_powm.c",
    "gmp/mpn/generic/sec_sqr.c",
    "gmp/mpn/generic/sec_tabselect.c",
    "gmp/mpn/generic/sqr.c",
    "gmp/mpn/generic/sqrlo.c",
    "gmp/mpn/generic/sqrlo_basecase.c",
    "gmp/mpn/generic/sqrmod_bnm1.c",
    "gmp/mpn/generic/sqr_basecase.c",
    "gmp/mpn/generic/strongfibo.c",
    "gmp/mpn/generic/submul_1.c",
    "gmp/mpn/generic/sub_err1_n.c",
    "gmp/mpn/generic/sub_err2_n.c",
    "gmp/mpn/generic/sub_err3_n.c",
    "gmp/mpn/generic/sub_n.c",
    "gmp/mpn/generic/toom22_mul.c",
    "gmp/mpn/generic/toom2_sqr.c",
    "gmp/mpn/generic/toom32_mul.c",
    "gmp/mpn/generic/toom33_mul.c",
    "gmp/mpn/generic/toom3_sqr.c",
    "gmp/mpn/generic/toom42_mul.c",
    "gmp/mpn/generic/toom42_mulmid.c",
    "gmp/mpn/generic/toom43_mul.c",
    "gmp/mpn/generic/toom44_mul.c",
    "gmp/mpn/generic/toom4_sqr.c",
    "gmp/mpn/generic/toom52_mul.c",
    "gmp/mpn/generic/toom53_mul.c",
    "gmp/mpn/generic/toom54_mul.c",
    "gmp/mpn/generic/toom62_mul.c",
    "gmp/mpn/generic/toom63_mul.c",
    "gmp/mpn/generic/toom6h_mul.c",
    "gmp/mpn/generic/toom6_sqr.c",
    "gmp/mpn/generic/toom8h_mul.c",
    "gmp/mpn/generic/toom8_sqr.c",
    "gmp/mpn/generic/toom_couple_handling.c",
    "gmp/mpn/generic/toom_eval_dgr3_pm1.c",
    "gmp/mpn/generic/toom_eval_dgr3_pm2.c",
    "gmp/mpn/generic/toom_eval_pm1.c",
    "gmp/mpn/generic/toom_eval_pm2.c",
    "gmp/mpn/generic/toom_eval_pm2exp.c",
    "gmp/mpn/generic/toom_eval_pm2rexp.c",
    "gmp/mpn/generic/toom_interpolate_12pts.c",
    "gmp/mpn/generic/toom_interpolate_16pts.c",
    "gmp/mpn/generic/toom_interpolate_5pts.c",
    "gmp/mpn/generic/toom_interpolate_6pts.c",
    "gmp/mpn/generic/toom_interpolate_7pts.c",
    "gmp/mpn/generic/toom_interpolate_8pts.c",
    "gmp/mpn/generic/trialdiv.c",
    "gmp/mpn/generic/zero.c",
    "gmp/mpn/generic/com.c",
    "gmp/mpn/generic/divexact.c",
    "gmp/mpn/generic/divis.c",
    "gmp/mpn/generic/dump.c",
    "gmp/mpn/generic/fib2_ui.c",
    "gmp/mpn/generic/gcd.c",
    "gmp/mpn/generic/gcdext.c",
    "gmp/mpn/generic/get_d.c",
    "gmp/mpn/generic/get_str.c",
    "gmp/mpn/generic/invert.c",
    "gmp/mpn/generic/jacobi.c",
    "gmp/mpn/generic/mul.c",
    "gmp/mpn/generic/perfpow.c",
    "gmp/mpn/generic/perfsqr.c",
    "gmp/mpn/generic/powm.c",
    "gmp/mpn/generic/random.c",
    "gmp/mpn/generic/random2.c",
    "gmp/mpn/generic/remove.c",
    "gmp/mpn/generic/rootrem.c",
    "gmp/mpn/generic/scan0.c",
    "gmp/mpn/generic/scan1.c",
    "gmp/mpn/generic/set_str.c",
    "gmp/mpn/generic/sizeinbase.c",
    "gmp/mpn/generic/sqrtrem.c",
    "gmp/mpn/generic/tdiv_qr.c",
    "gmp/mpn/generic/add_1.c",
  ]
  # Inlined
  sources += [
    "gmp/mpn/generic/add.c",
    "gmp/mpn/generic/cmp.c",
   #"gmp/mpn/generic/logops_n.c",
    "gmp/mpn/generic/neg.c",
   #"gmp/mpn/generic/popham.c",
   #"gmp/mpn/generic/sec_aors_1.c",
   #"gmp/mpn/generic/sec_div.c",
   #"gmp/mpn/generic/sec_pi1_div.c",
    "gmp/mpn/generic/sub.c",
    "gmp/mpn/generic/sub_1.c",
   #"gmp/mpn/generic/udiv_w_sdiv.c",
    "gmp/mpn/generic/zero_p.c",
   #"gmp/mpn/x86_64/fat/fat.c"
  ]
}

source_set("mpq") {
  configs += [ ":gmp_config" ]
  sources = [
    "gmp/mpq/abs.c",
    "gmp/mpq/aors.c",
    "gmp/mpq/canonicalize.c",
    "gmp/mpq/clear.c",
    "gmp/mpq/clears.c",
    "gmp/mpq/cmp.c",
    "gmp/mpq/cmp_si.c",
    "gmp/mpq/cmp_ui.c",
    "gmp/mpq/div.c",
    "gmp/mpq/equal.c",
    "gmp/mpq/get_d.c",
    "gmp/mpq/get_den.c",
    "gmp/mpq/get_num.c",
    "gmp/mpq/get_str.c",
    "gmp/mpq/init.c",
    "gmp/mpq/inits.c",
    "gmp/mpq/inp_str.c",
    "gmp/mpq/inv.c",
    "gmp/mpq/md_2exp.c",
    "gmp/mpq/mul.c",
    "gmp/mpq/neg.c",
    "gmp/mpq/out_str.c",
    "gmp/mpq/set.c",
    "gmp/mpq/set_d.c",
    "gmp/mpq/set_den.c",
    "gmp/mpq/set_f.c",
    "gmp/mpq/set_num.c",
    "gmp/mpq/set_si.c",
    "gmp/mpq/set_str.c",
    "gmp/mpq/set_ui.c",
    "gmp/mpq/set_z.c",
    "gmp/mpq/swap.c"
  ]
}

source_set("mpz") {
  configs += [ ":gmp_config" ]
  sources = [
    "gmp/mpz/2fac_ui.c",
    "gmp/mpz/abs.c",
    "gmp/mpz/add.c",
    "gmp/mpz/add_ui.c",
    "gmp/mpz/and.c",
    "gmp/mpz/aorsmul.c",
    "gmp/mpz/aorsmul_i.c",
    "gmp/mpz/array_init.c",
    "gmp/mpz/bin_ui.c",
    "gmp/mpz/bin_uiui.c",
    "gmp/mpz/cdiv_q.c",
    "gmp/mpz/cdiv_qr.c",
    "gmp/mpz/cdiv_qr_ui.c",
    "gmp/mpz/cdiv_q_ui.c",
    "gmp/mpz/cdiv_r.c",
    "gmp/mpz/cdiv_r_ui.c",
    "gmp/mpz/cdiv_ui.c",
    "gmp/mpz/cfdiv_q_2exp.c",
    "gmp/mpz/cfdiv_r_2exp.c",
    "gmp/mpz/clear.c",
    "gmp/mpz/clears.c",
    "gmp/mpz/clrbit.c",
    "gmp/mpz/cmp.c",
    "gmp/mpz/cmpabs.c",
    "gmp/mpz/cmpabs_d.c",
    "gmp/mpz/cmpabs_ui.c",
    "gmp/mpz/cmp_d.c",
    "gmp/mpz/cmp_si.c",
    "gmp/mpz/cmp_ui.c",
    "gmp/mpz/com.c",
    "gmp/mpz/combit.c",
    "gmp/mpz/cong.c",
    "gmp/mpz/cong_2exp.c",
    "gmp/mpz/cong_ui.c",
    "gmp/mpz/divegcd.c",
    "gmp/mpz/divexact.c",
    "gmp/mpz/dive_ui.c",
    "gmp/mpz/divis.c",
    "gmp/mpz/divis_2exp.c",
    "gmp/mpz/divis_ui.c",
    "gmp/mpz/dump.c",
    "gmp/mpz/export.c",
    "gmp/mpz/fac_ui.c",
    "gmp/mpz/fdiv_q.c",
    "gmp/mpz/fdiv_qr.c",
    "gmp/mpz/fdiv_qr_ui.c",
    "gmp/mpz/fdiv_q_ui.c",
    "gmp/mpz/fdiv_r.c",
    "gmp/mpz/fdiv_r_ui.c",
    "gmp/mpz/fdiv_ui.c",
    "gmp/mpz/fib2_ui.c",
    "gmp/mpz/fib_ui.c",
    "gmp/mpz/fits_sint.c",
    "gmp/mpz/fits_slong.c",
    "gmp/mpz/fits_sshort.c",
    "gmp/mpz/fits_uint.c",
    "gmp/mpz/fits_ulong.c",
    "gmp/mpz/fits_ushort.c",
    "gmp/mpz/gcd.c",
    "gmp/mpz/gcdext.c",
    "gmp/mpz/gcd_ui.c",
    "gmp/mpz/getlimbn.c",
    "gmp/mpz/get_d.c",
    "gmp/mpz/get_d_2exp.c",
    "gmp/mpz/get_si.c",
    "gmp/mpz/get_str.c",
    "gmp/mpz/hamdist.c",
    "gmp/mpz/import.c",
    "gmp/mpz/init.c",
    "gmp/mpz/init2.c",
    "gmp/mpz/inits.c",
    "gmp/mpz/inp_raw.c",
    "gmp/mpz/inp_str.c",
    "gmp/mpz/invert.c",
    "gmp/mpz/ior.c",
    "gmp/mpz/iset.c",
    "gmp/mpz/iset_d.c",
    "gmp/mpz/iset_si.c",
    "gmp/mpz/iset_str.c",
    "gmp/mpz/iset_ui.c",
    "gmp/mpz/jacobi.c",
    "gmp/mpz/kronsz.c",
    "gmp/mpz/kronuz.c",
    "gmp/mpz/kronzs.c",
    "gmp/mpz/kronzu.c",
    "gmp/mpz/lcm.c",
    "gmp/mpz/lcm_ui.c",
    "gmp/mpz/limbs_finish.c",
    "gmp/mpz/limbs_modify.c",
    "gmp/mpz/limbs_read.c",
    "gmp/mpz/limbs_write.c",
    "gmp/mpz/lucmod.c",
    "gmp/mpz/lucnum2_ui.c",
    "gmp/mpz/lucnum_ui.c",
    "gmp/mpz/mfac_uiui.c",
    "gmp/mpz/millerrabin.c",
    "gmp/mpz/mod.c",
    "gmp/mpz/mul.c",
    "gmp/mpz/mul_2exp.c",
    "gmp/mpz/mul_si.c",
    "gmp/mpz/mul_ui.c",
    "gmp/mpz/nextprime.c",
    "gmp/mpz/n_pow_ui.c",
    "gmp/mpz/oddfac_1.c",
    "gmp/mpz/out_raw.c",
    "gmp/mpz/out_str.c",
    "gmp/mpz/perfpow.c",
    "gmp/mpz/popcount.c",
    "gmp/mpz/powm.c",
    "gmp/mpz/powm_sec.c",
    "gmp/mpz/powm_ui.c",
    "gmp/mpz/pow_ui.c",
    "gmp/mpz/pprime_p.c",
    "gmp/mpz/primorial_ui.c",
    "gmp/mpz/prodlimbs.c",
    "gmp/mpz/random.c",
    "gmp/mpz/random2.c",
    "gmp/mpz/realloc.c",
    "gmp/mpz/realloc2.c",
    "gmp/mpz/remove.c",
    "gmp/mpz/roinit_n.c",
    "gmp/mpz/root.c",
    "gmp/mpz/rootrem.c",
    "gmp/mpz/rrandomb.c",
    "gmp/mpz/scan0.c",
    "gmp/mpz/scan1.c",
    "gmp/mpz/set.c",
    "gmp/mpz/setbit.c",
    "gmp/mpz/set_d.c",
    "gmp/mpz/set_f.c",
    "gmp/mpz/set_q.c",
    "gmp/mpz/set_si.c",
    "gmp/mpz/set_str.c",
    "gmp/mpz/set_ui.c",
    "gmp/mpz/size.c",
    "gmp/mpz/sizeinbase.c",
    "gmp/mpz/sqrt.c",
    "gmp/mpz/sqrtrem.c",
    "gmp/mpz/stronglucas.c",
    "gmp/mpz/sub.c",
    "gmp/mpz/sub_ui.c",
    "gmp/mpz/swap.c",
    "gmp/mpz/tdiv_q.c",
    "gmp/mpz/tdiv_qr.c",
    "gmp/mpz/tdiv_qr_ui.c",
    "gmp/mpz/tdiv_q_2exp.c",
    "gmp/mpz/tdiv_q_ui.c",
    "gmp/mpz/tdiv_r.c",
    "gmp/mpz/tdiv_r_2exp.c",
    "gmp/mpz/tdiv_r_ui.c",
    "gmp/mpz/tdiv_ui.c",
    "gmp/mpz/tstbit.c",
    "gmp/mpz/ui_pow_ui.c",
    "gmp/mpz/ui_sub.c",
    "gmp/mpz/urandomb.c",
    "gmp/mpz/urandomm.c",
    "gmp/mpz/xor.c"
  ]
  # Inlined
  sources += [
    "gmp/mpz/get_ui.c",
    "gmp/mpz/neg.c",
    "gmp/mpz/perfsqr.c",
  ]
}

source_set("printf") {
  configs += [ ":gmp_config" ]
  sources = [
    "gmp/printf/asprintf.c",
    "gmp/printf/asprntffuns.c",
    "gmp/printf/doprnt.c",
    "gmp/printf/doprntf.c",
    "gmp/printf/doprnti.c",
    "gmp/printf/fprintf.c",
    "gmp/printf/obprintf.c",
    "gmp/printf/obprntffuns.c",
    "gmp/printf/obvprintf.c",
    "gmp/printf/printf.c",
    "gmp/printf/printffuns.c",
    "gmp/printf/repl-vsnprintf.c",
    "gmp/printf/snprintf.c",
    "gmp/printf/snprntffuns.c",
    "gmp/printf/sprintf.c",
    "gmp/printf/sprintffuns.c",
    "gmp/printf/vasprintf.c",
    "gmp/printf/vfprintf.c",
    "gmp/printf/vprintf.c",
    "gmp/printf/vsnprintf.c",
    "gmp/printf/vsprintf.c"
  ]
}

source_set("scanf") {
  configs += [ ":gmp_config" ]
  sources = [
    "gmp/scanf/doscan.c",
    "gmp/scanf/fscanf.c",
    "gmp/scanf/fscanffuns.c",
    "gmp/scanf/scanf.c",
    "gmp/scanf/sscanf.c",
    "gmp/scanf/sscanffuns.c",
    "gmp/scanf/vfscanf.c",
    "gmp/scanf/vscanf.c",
    "gmp/scanf/vsscanf.c"
  ]
}
